@@ -15,6 +15,9 @@
 * Add optional drop-down terminal ('|') which has session-persistent
   working directory. Will silently be disabled if VTE is missing.
 
+* Delay sending of message with configured time, in order to be able to
+  cancel wrongly sent messages.
+
 == v0.7 / 2017-01-02
 
 * Messages are marked unread after a delay (default 2 sec) in
